# open-living-map

./: .gitignore  README.md  region_detail.json  regions.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: ars.py  config.py  db.py  logging.py
backend/app/etl/: build_scores.py  common.py  import_bkg.py  import_destatis.py  import_dwd.py  import_flaechenatlas.py  import_oepnv.py  import_osm.py  import_postal_codes.py  import_uba.py  import_unfallatlas.py
backend/app/models/: __init__.py  etl.py  indicator.py  preference.py  region.py  score.py
backend/app/repositories/: region_repository.py  score_repository.py
backend/app/schemas/: metadata.py  recommendation.py  region.py
backend/app/services/: explanations.py  regions.py  scoring.py
backend/migrations/: env.py
backend/migrations/versions/: 20260413_0001_initial.py  20260413_0002_add_oepnv_category_fields.py  20260414_0003_add_region_wiki_links.py  20260417_0004_add_region_list_indexes.py  20260417_0005_add_region_slug.py  20260417_0006_add_region_slug_index.py  20260418_0007_add_accident_point_lookup_index.py  20260419_0008_add_indicator_normalization_mode.py  20260419_0009_add_region_district_name.py  20260419_0010_add_ranking_score_indexes.py  20260420_0011_add_region_bem.py  20260420_0012_add_compare_indexes.py  20260420_0013_add_score_coverage_fields.py  20260420_0014_add_user_preference_retention_index.py  20260420_0015_add_region_search_trgm_indexes.py  20260420_0016_add_amenity_stage_category_geom_index.py  20260420_0017_add_region_postal_code_table.py  20260420_0018_make_region_slug_unique.py  20260421_0019_add_postal_primary_fields.py  (+6 more)
backend/tests/: test_recommendation_filters.py
frontend/: app.vue  (+5 more)
(+51 files in other folders)
