[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wohnortkompass-api"
version = "0.1.0"
description = "API fuer Wohnort-Kompass Deutschland"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.0"
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
